# rustibia

./: .gitignore  Cargo.toml
assets/configs/: map_conf.json  outfit_conf.json  sheets.json  sprite_conf.json  sprite_sheets.json
assets/maps/: ground_appearances.json  map.json  map.tmx  map_ground.json  otsp_tiles_01.tsx  world.tmx
assets/shaders/: actor.wgsl  agent.wgsl  items.wgsl  terrain.wgsl
crates/bevy_text_outline/: Cargo.toml  DESIGN.md
crates/bevy_text_outline/src/: atlas.rs  component.rs  extract.rs  lib.rs  prepare.rs
src/: camera.rs  conf.rs  main.rs
src/actor/: actions.rs  actor.rs  assets.rs  colors.rs  components.rs  events.rs  hud.rs  instancing.rs  material.rs  mod.rs  movement.rs  player.rs  spawning.rs
src/agent/: components.rs  events.rs  hud.rs  instancing.rs  material.rs  mod.rs  movement.rs
src/core/: animation.rs  assets.rs  instances.rs  items.rs  mod.rs  sprite.rs  systems.rs  text.rs
src/data/: map_assets.rs  mod.rs
src/game/: actor.rs  hud.rs  map.rs  mod.rs  player.rs
src/game_ui/: assets.rs  chat.rs  game_overlay.rs  leftpanel.rs  mod.rs  modal.rs  rightpanel.rs  toppanel.rs  window.rs
src/game_ui/chat/: events.rs  input.rs  messages.rs  mod.rs  state.rs  tabs.rs
src/game_ui/login/: charlist.rs  form.rs  (+1 more)
src/items/: container.rs  events.rs  instancing.rs  inventory.rs  item.rs  map_stack.rs  material.rs  mod.rs  ui_item.rs
src/main_ui/: chat.rs  game_overlay.rs  gameview.rs  leftpanel.rs  mod.rs  rightpanel.rs  toppanel.rs  window.rs
src/map/: assets.rs  chunks.rs  events.rs  floors.rs  interaction.rs  map.rs  material.rs  minimap.rs  minimap_ui.rs  mod.rs  position.rs  storage.rs
src/network/: events.rs  messages.rs  mod.rs  systems.rs
src/player/: components.rs  events.rs  interaction.rs  keyboard.rs  mod.rs  movement.rs  pathfinding.rs
src/ui/: chat.rs  gameview.rs  leftpanel.rs  mod.rs  rightpanel.rs  toppanel.rs  window.rs
(+5 files in other folders)
