[package]
name = "tibra"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["debug", "experimental_bevy_ui_widgets"] }
bevy_asset_loader = "0.25"
futures-lite = "2.6.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[features]
debug = []

[profile.release]
opt-level = 3
