[package]
name = "rustibia-client"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
bevy_text_outline = { path = "crates/bevy_text_outline" }
async-channel = "2.5.0"
async-net = "2.0.0"
asynchronous-codec = "0.7.0"
bevy = { version = "0.18", features = ["debug", "experimental_bevy_ui_widgets"] }
bevy_asset_loader = "0.25"
bytes = "1.11.1"
futures = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
pathfinding = "4.15.0"

[features]
debug = []

[profile.release]
opt-level = 3
